<resources>
    <string name="app_name">ContactsApp</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="bio">Bio</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="invalidSave_toast">Please insert a name and phone number</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_message">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_updated">Contact updated successfully</string>
    <string name="contact_deleted">Contact deleted successfully</string>
    <string name="error">Error</string>
    <string name="error_message">Something went wrong</string>
    <string name="error_message_name">Please enter a name</string>
    <string name="error_message_phone">Please enter a phone number</string>
    <string name="error_message_email">Please enter a valid email</string>
    <string name="error_message_address">Please enter an address</string>
    <string name="error_message_phone_length">Please enter a valid phone number</string>
    <string name="error_message_phone_exists">Phone number already exists</string>
    <string name="error_message_email_exists">Email already exists</string>

</resources>