<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".AddEditContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="1dp">

        <!--circular image view for the profile pic of a contact-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivContactImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/colorTextPrimary"
            app:civ_border_width="1dp"
            android:layout_marginBottom="10dp"/>

        <!--EditText view for the Name of the contact-->
        <EditText
            android:id="@+id/ET_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_input_field"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_baseline_text_fields_24"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="17sp" />

        <!--EditText view for the Phone number of the contact-->
        <EditText
            android:id="@+id/ET_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_input_field"
            android:hint="@string/phone"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="17sp" />

        <!--EditText view for the Email of the contact-->
        <EditText
            android:id="@+id/ET_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_input_field"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="17sp" />

        <!--EditText view for the Address of the contact-->
        <EditText
            android:id="@+id/ET_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_input_field"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:drawableStart="@drawable/ic_baseline_location_city_24"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="17sp" />

        <!--EditText view for a Bio note of the contact-->
        <EditText
            android:id="@+id/ET_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_input_field"
            android:hint="@string/bio"
            android:inputType="textLongMessage"
            android:drawableStart="@drawable/ic_baseline_note_24"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="17sp" />

    </LinearLayout>


<!--    Fab for saving data to DB-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        app:backgroundTint="@color/colorTextPrimary"
        android:src="@drawable/ic_baseline_save_24"
        app:tint="@color/white"
        android:elevation="10dp"
        app:pressedTranslationZ="10dp"
        android:contentDescription="TODO" />

</RelativeLayout>